# prime_Dai_Chuyu

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/prime_cd3412/: index.doctree
docs/_build/doctrees/autoapi/prime_cd3412/prime_cd3412/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: example.ipynb.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/prime_cd3412/: index.rst.txt
docs/_build/html/_sources/autoapi/prime_cd3412/prime_cd3412/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/prime_cd3412/: index.html
docs/_build/html/autoapi/prime_cd3412/prime_cd3412/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/prime_cd3412/: __init__.py  prime_cd3412.py
tests/: test_prime_cd3412.py
