[tool.poetry]
name = "prime_cd3412"
version = "0.1.0"
description = "package for MDS HW7"
authors = ["Chuyu Dai"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
