[tool.poetry]
name = "prime-cd3412"
version = "0.1.0"
description = "Package for MDS HW7"
authors = ["Chuyu Dai"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
myst-nb = "1.0.0rc0"
test-pypi = "^0.22"


[tool.poetry.group.dev.dependencies]
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^1.3.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
